# mlops-proj-demo

./: .gitignore  MODEL_CARD.md  README.md  docker-compose.yml  flag.txt  main.py  pyproject.toml  test.txt
.github/workflows/: ci.yml  deploy-dev.yml  promote-prod.yml
app/: config.py  database.py  main.py  metrics.py
app/models/: base_model.py  distilbert_model.py
app/schemas/: prediction.py
deploy/helm/ml-service/: Chart.yaml  values.yaml
deploy/helm/ml-service/templates/: deployment.yaml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
deploy/monitoring/grafana/: grafana-config.yaml  grafana-deployment.yaml
deploy/monitoring/prometheus/: prometheus-config.yaml  prometheus-deployment.yaml  prometheus-local.yml
docker/: Dockerfile.api  Dockerfile.training
pipelines/dags/: model_deployment.py  training_pipeline.py
scripts/: setup-local.sh
sql/: init.sql
tests/integration/: test_api.py
tests/load/: locustfile.py
tests/unit/: test_models.py
train/: train_distilbert.py
