[project]
name = "mlops-proj-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "mlflow==2.7.1",
    "prometheus-client==0.19.0",
    "psycopg2-binary==2.9.7",
    "pydantic==2.5.0",
    "torch==2.0.1",
    "transformers==4.30.2",
    "uvicorn==0.24.0",
]
