[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-proj-demo"
version = "0.1.0"
description = "MLOps demo with DistilBERT inference service"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "httpx==0.25.2",
    "prometheus-client==0.19.0",
    "pydantic==2.5.0",
    "torch>=2.2.0",
    "uvicorn==0.24.0",
]

[project.optional-dependencies]
dev = [
    "black==23.9.1",
    "flake8==6.1.0",
    "mypy==1.6.1",
    "pre-commit==3.5.0",
    "locust==2.17.0",
    "pytest==7.4.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "deploy*", "sql*", "docker*", "pipelines*", "scripts*"]